- Fixed Build transaction cancelled (https://bugzilla.redhat.com/show_bug.cgi?id=1833623)
- Added Message box for users if build transaction fails
- New icons (thanks to Carson Black)

2020-04-23 v. 2.0.2
---------------------
- Fixed another crash at startup with missing or empty settings 
  entry into configuration file

2020-04-13 v. 2.0.1
---------------------
- Fixed a crash at startup with missing settings entry into configuration file
- Fixed program closure if transaction is cancelled by user
- Fixed a crash at startup without configuration file

2020-04-04 v. 2.0.0
---------------------
- Massively reworked dnfdragora to be async and more reliable
- Improved logging and added logging to dnfdragora-updater
- Improved error handling for transactions

2019-04-26 v. 1.1.2
---------------------
- Fix screenshot referenced in dnfdragora metainfo file
- Add support for more ARM architectures and POWER-based architectures
- Refer to the architectures by their basearch names
- Really use given file for logging

2019-01-17 v. 1.1.1
---------------------
- Relabeled "Check all" button to "Select all", see
  https://bugzilla.redhat.com/show_bug.cgi?id=1654684
- Filled in missing Python dependency checks into CMake
- Fixed issue #82, dnfdragora-updater crashed when using Papirus-Dark icon theme
- Fixed issue #119, Set focus to search-field after dialog init
- Handle additional progress callback actions for DNF 3.6+, see
  https://bugzilla.redhat.com/show_bug.cgi?id=1624652

2018-09-15 v. 1.1.0
---------------------
- Fixed issue #70, aligned check boxes into user preferences
- Fixed issue #113, adding user preferences to get newest package only
  on searching
- Updated repository information dialog with repo size and its package
  number issue #97
- enabling/disabling repository does not update packages (issue #98)
- dnfdragora-updater: hide icon if no updates (some problems 
  on QT desktops)
- dnfdragora-updater: hide icon if dnfdragora update is chosen 